# dtkgui

./: .gitignore  .packit.yaml  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  dtkgui.cmake  dtkgui.pro  linglong.yaml
docs/: CMakeLists.txt
docs/kernel/: dpalette.zh_CN.dox  index.zh_CN.md
docs/src/: dguiapplicationhelper.zh_CN.dox  dimagehandler.zh_CN.dox  dplatformtheme.zh_CN.dox  dtkgui-index.qdoc  dtkgui.qdoc
docs/util/: ddciicon.zh_CN.dox  ddciiconpalette.zh_CN.dox  ddciiconplayer.zh_CN.dox  ddesktopservices.h.zh_CN.dox  dicontheme.zh_CN.dox  index.zh_CN.md
examples/animation-dci/: 3depict.dci  CMakeLists.txt  dci_heart.dci  main.cpp  test_dci_icon.qrc
examples/dnd-example/: CMakeLists.txt  dnd-example.pro  dnd-test-client.cpp  dnd-test-client.pro  dnd-test-server.cpp  dnd-test-server.pro
examples/frameless-window/: CMakeLists.txt  main.cpp
examples/test-taskbar/: CMakeLists.txt  main.cpp  taskbar.pro  test-taskbar.pro  testtaskbarwindow.cpp  testtaskbarwindow.h
src/: CMakeLists.txt  DFileDragServer  DFontManager  DGuiApplicationHelper  DPlatformHandle  DPlatformTheme  dfiledrag.cpp  dfiledrag.h  dfiledragclient.cpp  dfiledragclient.h  dfiledragserver.cpp  dfiledragserver.h  dfontmanager.cpp  dfontmanager.h  dforeignwindow.cpp  dforeignwindow.h  dguiapplicationhelper.cpp  dguiapplicationhelper.h  dnativesettings.cpp  dnativesettings.h  dpalette.cpp  dpalette.h  dplatformhandle.cpp  dplatformhandle.h  dplatformtheme.cpp  dplatformtheme.h  dregionmonitor.cpp  dregionmonitor.h  dsvgrenderer.cpp  dsvgrenderer.h  dtaskbarcontrol.cpp  dtaskbarcontrol.h  dthumbnailprovider.cpp  dthumbnailprovider.h  dtkgui_global.h  dwindowgroupleader.cpp  dwindowgroupleader.h  dwindowmanagerhelper.cpp  dwindowmanagerhelper.h  qt_lib_dtkgui.pri  (+1 more)
src/dbus/: arealist.h  com.deepin.api.XEventMonitor.xml  com.deepin.dtk.FileDrag.conf  dbus.cmake  xeventmonitor_interface.cpp  xeventmonitor_interface.h
src/filedrag/: DFileDragClient  dfiledrag.cmake  dfiledrag.cpp  dfiledrag.h  dfiledragclient.cpp  dfiledragclient.h  dfiledragcommon.h  dfiledragserver.cpp  dfiledragserver.h  filedrag.pri
src/kernel/: dforeignwindow.cpp  dforeignwindow.h  dguiapplicationhelper.cpp  dguiapplicationhelper.h  dnativesettings.cpp  dpalette.cpp  dpalette.h  dplatformhandle.cpp  dplatformhandle.h  dplatformtheme.cpp  dregionmonitor.cpp  dwindowgroupleader.cpp  dwindowgroupleader.h  dwindowmanagerhelper.cpp  dwindowmanagerhelper.h  kernel.cmake  kernel.pri  orgdeepindtkpreference.hpp
src/plugins/: dplatforminterface.cpp  dplatforminterface.h  dplatforminterface_p.h  dplatformwindowinterface.cpp  plugins.cmake
src/plugins/platform/treeland/: dtreelandplatforminterface.cpp  dtreelandplatforminterface.h  dtreelandplatforminterface_p.h  dtreelandplatformwindowinterface.cpp  dtreelandplatformwindowinterface.h  dtreelandplatformwindowinterface_p.h  dtreelandwindowmanagerhelper.cpp  dtreelandwindowmanagerhelper.h  personalizationwaylandclientextension.cpp  personalizationwaylandclientextension.h  treeland.cmake
src/plugins/platform/xcb/: dxcbplatforminterface.cpp  dxcbplatforminterface.h  dxcbplatforminterface_p.h  dxcbplatformwindowinterface.cpp  dxcbplatformwindowinterface.h  dxcbplatformwindowinterface_p.h  xcb.cmake
src/private/: dfiledragcommon_p.h  dfiledragserver_p.h  dfontmanager_p.h  dguiapplicationhelper_p.h  dnativesettings_p.h  dplatforminterface_p.h  dplatformtheme_p.h  dplatformwindowinterface_p.h  dplatformwindowinterface_p_p.h  dregionmonitor_p.h  dtaskbarcontrol_p.h  private.cmake  private.pri
src/util/: DDciIconPalette  DIconTheme  DTaskbarControl  ddciicon.cpp  ddciicon.h  ddciiconpalette.cpp  ddciiconpalette.h  ddciiconplayer.cpp  ddesktopservices_linux.cpp  dfontmanager.cpp  dfontmanager.h  dicon.cpp  dicontheme.cpp  dicontheme.h  dimagehandler.cpp  dimagehandlerlibs.cpp  dprivateaccessor_p.h  dsvgrenderer.cpp  dsvgrenderer.h  dtaskbarcontrol.cpp  dtaskbarcontrol.h  dthumbnailprovider.cpp  util.cmake  util.pri
src/util/icons/: deepin-theme-plugin-icons.qrc
src/util/icons/dci/: close.dci  sp_alert.dci  sp_ok.dci  sp_waiting.dci  (+1 more)
src/util/private/: dbuiltiniconengine.cpp  dbuiltiniconengine_p.h  dciiconengine.cpp  dciiconengine_p.h  diconproxyengine.cpp  diconproxyengine_p.h  dimagehandlerlibs_p.h  xdgiconproxyengine.cpp  xdgiconproxyengine_p.h
src/wayland/: dcontextshellwindow.cpp  dcontextshellwindow.h  personalizationwaylandclientextension.cpp  personalizationwaylandclientextension.h  qwaylandpersonalizationshellintegration.cpp  qwaylandpersonalizationshellintegration_p.h  qwaylandwindowcontextshellsurface.cpp  qwaylandwindowcontextshellsurface_p.h  wayland.cmake
src/wayland/protocol/: treeland-personalization-manager-v1.xml
tests/: CMakeLists.txt  main.cpp  res.qrc  test-recoverage.sh  test.h  tests.pro
tests/dcis/: selected_indicator.dci
tests/images/deepin/: index.theme
tests/platform-plugin-test/: CMakeLists.txt  ddynamicmetaobject.cpp  ddynamicmetaobject.h  dplatformnativeinterface.cpp  dplatformnativeinterface.h  dplatformsettings.cpp  dplatformsettings.h  dummysettings.cpp  dummysettings.h  main.cpp  qminimalbackingstore.cpp  qminimalbackingstore.h  qminimalintegration.cpp  qminimalintegration.h
tests/src/: tdregionmonitor.cpp  ut_builtinengine.cpp  ut_dciiconengine.cpp  ut_ddciicon.cpp  ut_ddciiconpalette.cpp  ut_ddciiconplayer.cpp  ut_dfiledrag.cpp  ut_dfontmanager.cpp  ut_dforeignwindow.cpp  ut_dguiapplicationhelper.cpp  ut_dicon.cpp  ut_diconproxyengine.cpp  ut_dicontheme.cpp  ut_dimagehandler.cpp  ut_dnativesettings.cpp  ut_dpalette.cpp  ut_dplatformhandle.cpp  ut_dplatformtheme.cpp  ut_dregionmonitor.cpp  ut_dsvgrenderer.cpp  ut_dtaskbarcontrol.cpp  ut_dthumbnailprovider.cpp  ut_dwindowgroupleader.cpp  ut_dwindowmanagerhelper.cpp  ut_xdgiconproxyengine.cpp
tools/dci-icon-theme/: CMakeLists.txt  README.md  main.cpp
tools/dci-image-converter/: CMakeLists.txt  dci-image-converter.pro  main.cpp
tools/dde-kwin-debug/: CMakeLists.txt  dde-kwin-debug.pro  main.cpp
tools/deepin-gui-settings/: CMakeLists.txt  deepin-gui-settings.pro  main.cpp
(+76 files in other folders)
